fix h2 spacing

--- a/dev/scss/_main.scss
+++ b/dev/scss/_main.scss
@@ -185,8 +185,9 @@ h2 {
   font-family: neuzeit-grotesk-extra-conden, sans-serif;
   font-weight: 900;
   font-style: normal;
-  letter-spacing: -1px;
   color: $lightblue;
+  letter-spacing: -1px;
+  line-height: 28px;
 }
 
 h3 {
